[gd_scene load_steps=7 format=3 uid="uid://d36mcbskqjfw7"]

[ext_resource type="Script" uid="uid://dg4hmiluk78qf" path="res://Scripts/UI/dismantle_panel.gd" id="1_u26rl"]
[ext_resource type="PackedScene" uid="uid://o387qlahldf" path="res://Scenes/UI/StatsDisplay/stats_visual.tscn" id="2_73x0t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_duth6"]
bg_color = Color(0.13333334, 0.1254902, 0.20392157, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.13333334, 0.1254902, 0.20392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5h6xq"]
bg_color = Color(0.5802528, 0.3531882, 0.623151, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5nvo2"]
bg_color = Color(0.7605357, 0.30912784, 0.4362017, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3j0xm"]
bg_color = Color(0.9743381, 0, 0.4473555, 1)

[node name="DismantlePanel" type="PanelContainer"]
custom_minimum_size = Vector2(300, 650)
theme_override_styles/panel = SubResource("StyleBoxFlat_duth6")
script = ExtResource("1_u26rl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4627451, 0.25882354, 0.5411765, 1)
theme_override_font_sizes/font_size = 32
text = "Dismantle Weapon"
autowrap_mode = 3

[node name="Body" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.37254903, 0.8039216, 0.89411765, 1)
text = "Are you sure you want to dismantle: "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureParent" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HandleTexture" type="TextureRect" parent="VBoxContainer/TextureParent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AttachmentTexture" type="TextureRect" parent="VBoxContainer/TextureParent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ProjectileTexture" type="TextureRect" parent="VBoxContainer/TextureParent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonParent" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ConfirmButton" type="Button" parent="VBoxContainer/ButtonParent"]
layout_mode = 2
size_flags_horizontal = 3
text = "Confirm Dismantle"

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonParent"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Stats" parent="VBoxContainer" instance=ExtResource("2_73x0t")]
layout_mode = 2
button_color = Color(0.23921569, 0.23137255, 0.32156864, 1)
button_text_color = Color(0.3882353, 0.60784316, 1, 1)
text_color = Color(0.8392157, 0, 0, 1)
scroll_stylebox = SubResource("StyleBoxFlat_5h6xq")
scroll_grabber_stylebox = SubResource("StyleBoxFlat_5nvo2")
scroll_grabber_hover_stylebox = SubResource("StyleBoxFlat_3j0xm")
only_show_changed = true
hide_player_only = true

[connection signal="pressed" from="VBoxContainer/ButtonParent/ConfirmButton" to="." method="_confirm"]
[connection signal="pressed" from="VBoxContainer/ButtonParent/CancelButton" to="." method="_cancel"]
